manifests/online-boutique/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetrycollector
  namespace: online-boutique
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetrycollector
  template:
    metadata:
      labels:
        app: opentelemetrycollector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector:0.96.0
          args: ["--config=/etc/otel/config.yaml"]
          ports:
            - containerPort: 4317
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /etc/otel
      volumes:
        - name: config
          configMap:
            name: otel-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: opentelemetrycollector
  namespace: online-boutique
spec:
  selector:
    app: opentelemetrycollector
  ports:
    - name: grpc-otlp
      port: 4317
      targetPort: 4317
      protocol: TCP
